version 1.7.9, in progress
- Revamp the data structure "wizard"
- Fix bugs 2102478, 2116172, 2118506 
- Periodogram graph: fix bug for case where the locale
  decimal separator is not '.'
- Add Russian translation
- Small GUI fixes
- Modifications to web-downloader for new server settings
- Fix for non-ascii file names in session files on MS
  Windows
- genr: fix for unary minus in exponentiation (e.g. x^-.5)
- nls: fix R^2 printout

9/14/2008 version 1.7.8
- Add a language-switching option to the gretl GUI (under
  Preferences/General)
- Improve formatting of HCCME options pane
- Fix breakage in "rename" command (renaming series)
- Fix bug 2089048
- Enable Chow test for non-time series datasets
- Revise formatting style for model output
- Change the label "standard error of residuals" to
  "standard error of the regression"
- Allow users to change the text size in help windows
- Fix two more bugs in connection with user-defined
  functions in the context of a sub-sampled dataset
- Fix bug: with the --panel-vars option to the
  "setobs" command, check more carefully the validity 
  of the supposed unit and time-period index variables
- Chow test: perform a robust version if the original
  model was estimated using an HCCME
- OS X package: fix for the problem whereby GTK could
  lose track of its image-loading modules
- CSV data: improve recognition of daily dates
- PCA: fix column-order of components in printout for the
  case of more than 7 components
- Small fixes for opening of datafiles in GUI
- GARCH: add --nc option to suppress the constant in the
  mean equation; add --fcp option to use Fiorentini et al
  code; expand and update help entry
- Periodogram graph: always base y-axis at zero
- Seasonal ARMA: fix for bad handling of automatically
  added scalars

8/28/2008 version 1.7.7
- Revamp of internal handling of scalar variables
- The --preserve option to the "nulldata" and "open" commands
  now preserves existing scalars as well as matrices